--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $mod = SUPER
 # Default applications
 $terminal = ghostty
 $fileManager = Thunar
-$browser = brave --ozone-platform=wayland --enable-gpu-rasterization
+$browser = brave --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
 $messenger = env GDK_SCALE=1 signal-desktop --ozone-platform=wayland --enable-features=UseOzonePlatform
 $webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
 
