--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -37,8 +37,18 @@ exec-once = xrandr --output HDMI-A-1 --primary
 # Prefer dark themes on all gnome apps
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
+# Clean up any residual execution or PID from waybar_cava.sh and cava
+exec-once = pkill -f waybar_cava.sh
+exec-once = pkill cava
+# exec-once = rm -rf /tmp/waybar_cava* (safer being specific...)
+exec-once = rm -rf /tmp/waybar_cava_--left.pid
+exec-once = rm -rf /tmp/waybar_cava_--right.pid
+exec-once = rm -rf /tmp/waybar_cava_config_--left
+exec-once = rm -rf /tmp/waybar_cava_config_--right
+
 # Set Hyprshot save location
 env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
+
 
 #_________________________________________________________________________
 # ================== BRAVE WEBAPPS WINDOW RULES ==========================
