landscape/portrait window rules, safer binds

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,11 +1,11 @@
 # Learn how to configure Hyprland: https://wiki.hyprland.org/Configuring/
 
-# _________________________________________________________________
-# ======================== Monitor/Workspace ======================
+#__________________________________________________________________________________________________
+# ======================================= Monitor/Workspace =======================================
 source = ~/.config/hypr/monitors.conf
 
-# _________________________________________________________________
-# ======================= Default variables =======================
+#__________________________________________________________________________________________________
+# ======================================= Default variables =======================================
 # Default MOD key
 $mod = SUPER
 
@@ -16,8 +16,8 @@ $browser = brave --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vul
 $messenger = env GDK_SCALE=1 signal-desktop --ozone-platform=wayland --enable-features=UseOzonePlatform
 $webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
 
-# _________________________________________________________________
-# ===================== Core Hyprland Config =======================
+#__________________________________________________________________________________________________
+# ===================================== Core Hyprland Config ======================================
 
 # Environment variables
 env = XCURSOR_THEME,Bibata-Modern-Ice
@@ -29,16 +29,16 @@ env = HYPRCURSOR_SIZE,24
 exec-once = waybar
 exec-once = mako
 exec-once = hypridle
-#exec-once = hyprsunset -t 3500  # Disabled via Control Panel
+# exec-once = hyprsunset -t 3500  # Disabled via Control Panel
 exec-once = swaybg -i ~/.local/share/archriot/backgrounds/$(python3 -c "import json; print(json.load(open('$HOME/.config/archriot/background-prefs.json')).get('current_background', 'riot_01.jpg'))" 2>/dev/null || echo "riot_01.jpg") -m fill
 exec-once = sleep 2 && $HOME/.local/share/archriot/config/bin/welcome
 
-# _________________________________________________________________
-# ========================= Window Rules ==========================
+#__________________________________________________________________________________________________
+# ======================================== Window Rules ===========================================
 source = ~/.config/hypr/windowrules.conf
 
-# _________________________________________________________________
-# ======================== INPUT SETTINGS =========================
+#__________________________________________________________________________________________________
+# ======================================= INPUT SETTINGS ==========================================
 
 # Input configuration
 input {
@@ -55,16 +55,16 @@ input {
     repeat_delay = 600
 }
 
-# _________________________________________________________________
-# ====================== Default Appearance =======================
+#__________________________________________________________________________________________________
+# ====================================== Default Appearance =======================================
 
 # General appearance
 general {
     gaps_in = 0
     gaps_out = 2
     border_size = 1
-    col.active_border = rgba(89b4fa88) 45deg
-    col.inactive_border = rgba(1a1a1a60)
+    col.active_border = rgba(89b4fa95) rgba(0000ff85) rgba(8000ff95)
+    col.inactive_border = rgba(89b4fa58) rgba(0000ff58)
     layout = dwindle
     allow_tearing = false
 }
@@ -93,10 +93,10 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4
-        render_power = 2
-        color = rgba(1a1b26cc)
-        color_inactive = rgba(1a1b26aa)
+        range = 8
+        render_power = 8
+        color = rgba(3a2b5acc)
+        color_inactive = rgba(2a2b40aa)
     }
 }
 
@@ -104,14 +104,22 @@ decoration {
 animations {
     enabled = true
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # Custom bounce-y bezier for playful motion
+    bezier = myBezier, 0.25, 1.1, 0.5, 1.01
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # Windows sliding/fading in a bouncy way
+    animation = windows, 1, 5, myBezier
+    animation = windowsOut, 1, 6, myBezier, popin 90%
+
+    # Borders “wobble” slightly on update
+    animation = border, 1, 12, myBezier
+    animation = borderangle, 1, 10, myBezier
+
+    # Fades with a slight acceleration
+    animation = fade, 1, 6, myBezier
+
+    # Workspaces pop with a little extra stretch
+    animation = workspaces, 1, 5, myBezier
 }
 
 # Layouts
@@ -133,17 +141,17 @@ misc {
 
 # Group styling
 group {
-    col.border_active = rgba(89b4fa88) 45deg
+    col.border_active = rgba(bb9af7ff) 45deg
 
     groupbar {
         col.active = rgba(bb9af7ff)
     }
 }
 
-# _________________________________________________________________
-# ======================== KEYBINDINGS  ===========================
+#__________________________________________________________________________________________________
+# ======================================== KEYBINDINGS  ===========================================
 source = ~/.config/hypr/keybindings.conf
 
-# _________________________________________________________________
-# ========================== PLUGINS ==============================
+#__________________________________________________________________________________________________
+# ========================================== PLUGINS ==============================================
 source = ~/.config/hypr/plugins.conf
