--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -5,7 +5,8 @@
 # ═══════════════════════════════════════════════════════════════════════════════
 # FOUR MONITOR RE-WORK BY: Tarso Galvão
 
-#================= COMMON FOR ALL SCREENS (all 4 monitors) ===============================
+#__________________________________________________________________________________________________
+#========================== COMMON FOR ALL SCREENS (all 4 monitors) ===============================
 # Background with beautiful blur effect
 background {
     monitor =
@@ -29,7 +30,8 @@ general {
     text_trim = false  #required for screenfetch ascii logo to show properly
 }
 
-#==================== MAIN LOCKSCREEN (middle monitor LANDSCAPE) ================================
+#__________________________________________________________________________________________________
+#====================== MAIN LOCKSCREEN (middle monitor LANDSCAPE) ================================
 # Distro Logo display
 label {
     monitor = HDMI-A-1
@@ -188,7 +190,8 @@ label {
     valign = bottom
 }
 
-#======================= SAMSUNG(right monitor PORTRAIT) ===========================
+#__________________________________________________________________________________________________
+#================================ SAMSUNG(right monitor PORTRAIT) =================================
 # Time display - small bottom right
 label {
     monitor = DP-1
@@ -234,7 +237,8 @@ label {
     shadow_color = rgba(0, 0, 0, 0.8)
 }
 
-#========================= TV LOCKSCREEN (top (top-left) monitor LANDSCAPE) ================================
+#__________________________________________________________________________________________________
+#======================= TV LOCKSCREEN (top (top-left) monitor LANDSCAPE) =========================
 # Time display - large and prominent
 label {
     monitor = DVI-D-1
@@ -303,7 +307,8 @@ label {
     shadow_color = rgba(0, 0, 0, 0.8)
 }
 
-#========================= SAMSUNG (left monitor PORTRAIT) ================================
+#__________________________________________________________________________________________________
+#================================ SAMSUNG (left monitor PORTRAIT) =================================
 label {
     monitor = HDMI-A-3
     text = cmd[update:5000] sh -c "cpu=\$(sensors | awk '/k10temp-pci-00c3/,/^$/ {if(/Tctl/) print \$2}' | tr -d '+'); gpu_apu=\$(sensors | awk '/amdgpu-pci-0b00/,/^$/ {if(/edge/) print \$2}' | tr -d '+'); gpu_discrete=\$(sensors | awk '/amdgpu-pci-0100/,/^$/ {if(/edge/) print \$2}' | tr -d '+'); nvme=\$(sensors | awk '/nvme-pci-0a00/,/^$/ {if(/Composite/) print \$2}' | tr -d '+'); printf '󰍛 Ryzen 5 %s\n\n󰢮 Vega 7 %s\n\n󰢮 RX 550 %s\n\n󰘚 NVMe / %s\n' \$cpu \$gpu_apu \$gpu_discrete \$nvme"
