--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -1,60 +1,90 @@
-# ================================ KEYBINDINGS ================================
+#__________________________________________________________________________________________________
+# ========================================= KEYBINDINGS ===========================================
+# `unbind` keys before binding them so they dont clash with other keys.
+# Use `find` to make sure it's not already in use in THIS FILE.
+# =================================================================================================
 
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Main Shortcuts
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Default Terminal
-# Uncomment ONE of the options below (or both/all if you want more shortcuts).
+unbind = $mod, return
 bind = $mod, return, exec, $terminal
+
+# Flying terminal
+unbind = $mod SHIFT, return
 bind = $mod SHIFT, return, exec, $terminal --class=com.mitchellh.ghostty-floating
 
 # Default File Manager
+unbind = $mod, E
 bind = $mod, E, exec, $fileManager
 
 # System monitor
+unbind = $mod, T
 bind = $mod, T, exec, $terminal -e btop
 
 # Default Editors
+unbind = $mod, N
 bind = $mod, N, exec, $terminal -e nvim
+unbind = $mod, C
 bind = $mod, C, exec, code
+unbind = $mod, Z
 bind = $mod, Z, exec, zed
 
 # Default and Alt Browsers
+unbind = $mod, B
 bind = $mod, B, exec, $browser
+unbind = $mod SHIFT, B
 bind = $mod SHIFT, B, exec, firefox
+#unbind = $mod CTRL, B
 #bind = $mod CTRL, B, exec, chromium
 
 # App launcher
+unbind = $mod, space
 bind = $mod, space, exec, fuzzel
 
 # App Closer
+unbind = $mod, Q
 bind = $mod, Q, killactive,
 
 # Control Panel
+unbind = $mod, F12
 bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel
 
 # Pomodoro Timer
+unbind = $mod, comma
 bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh
 
 # Help system
+unbind = $mod, H
 bind = $mod, H, exec, $browser --class=archriot-help --app="https://archriot.org"
 
 # Waybar toggle and theme switch
+unbind = $mod SHIFT, SPACE
 bind = $mod SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
+unbind = $mod CTRL, SPACE
 bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next
 
 # Notifications
+unbind = $mod, period
 bind = $mod, period, exec, makoctl dismiss
+unbind = $mod SHIFT, period
 bind = $mod SHIFT, period, exec, makoctl dismiss --all
 
 
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Window Management
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Fix off-screen windows (manual trigger)
+unbind = $mod SHIFT, TAB
 bind = $mod SHIFT, TAB, exec, ~/.local/share/archriot/config/bin/scripts/fix-offscreen-windows.sh
 
 # Window actions
+unbind = $mod, V
+unbind = $mod, J
+unbind = $mod, P
+unbind = $mod, TAB
+#unbind = CTRL, TAB
 bind = $mod, V, togglefloating,
 bind = $mod, J, togglesplit,
 bind = $mod, P, pseudo,
@@ -62,59 +92,86 @@ bind = $mod, TAB, exec, ~/.local/share/archriot/config/bin/scripts/window-switch
 #bind = CTRL, TAB, hyprexpo:expo, toggle
 
 # Move focus
+unbind = $mod, left
+unbind = $mod, right
+unbind = $mod, up
+unbind = $mod, down
 bind = $mod, left, movefocus, l
 bind = $mod, right, movefocus, r
 bind = $mod, up, movefocus, u
 bind = $mod, down, movefocus, d
 
 # Switch workspaces
+unbind = $mod, 1
+unbind = $mod, 2
+unbind = $mod, 3
+unbind = $mod, 4
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
 bind = $mod, 4, workspace, 4
 
 # Move windows to workspaces
+unbind = $mod SHIFT, 1
+unbind = $mod SHIFT, 2
+unbind = $mod SHIFT, 3
+unbind = $mod SHIFT, 4
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 
 # Swap windows
+unbind = $mod SHIFT, left
+unbind = $mod SHIFT, right
+unbind = $mod SHIFT, up
+unbind = $mod SHIFT, down
 bind = $mod SHIFT, left, swapwindow, l
 bind = $mod SHIFT, right, swapwindow, r
 bind = $mod SHIFT, up, swapwindow, u
 bind = $mod SHIFT, down, swapwindow, d
 
 # Move windows around (smart movement)
+unbind = $mod CTRL, left
+unbind = $mod CTRL, right
+unbind = $mod CTRL, up
+unbind = $mod CTRL, down
 bind = $mod CTRL, left, movewindow, l
 bind = $mod CTRL, right, movewindow, r
 bind = $mod CTRL, up, movewindow, u
 bind = $mod CTRL, down, movewindow, d
 
 # Resize windows
+unbind = $mod, minus
+unbind = $mod, equal
+unbind = $mod SHIFT, minus
+unbind = $mod SHIFT, equal
 bind = $mod, minus, resizeactive, -100 0
 bind = $mod, equal, resizeactive, 100 0
 bind = $mod SHIFT, minus, resizeactive, 0 -100
 bind = $mod SHIFT, equal, resizeactive, 0 100
 
 # Unified Fullscreen
+unbind = $mod, F
 bind = $mod, F, fullscreen
 
 # "Minimize" (send to hidden workspace)
+unbind = CTRL, ESCAPE
 bind = CTRL, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle
 # Restore last minimized window to current workspace
+unbind = SHIFT, ESCAPE
 bind = SHIFT, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle restore
 
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Media Bindings
-# -----------------------------------------------------------------------------
-# Mouse bindings
+# -------------------------------------------------------------------------------------------------
+# Mouse bindings (KDE mouse defaults)
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 bind = $mod, mouse_down, workspace, e+1
 bind = $mod, mouse_up, workspace, e-1
 
-# Media keys
+# Media keys (hardware default)
 bindel = ,XF86AudioRaiseVolume, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --inc
 bindel = ,XF86AudioLowerVolume, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --dec
 bindel = ,XF86AudioMute, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --toggle
@@ -122,59 +179,77 @@ bindel = ,XF86AudioMicMute, exec, ~/.local/share/archriot/config/bin/scripts/Vol
 bindel = ,XF86MonBrightnessUp, exec, ~/.local/share/archriot/config/bin/scripts/Brightness.sh --up
 bindel = ,XF86MonBrightnessDown, exec, ~/.local/share/archriot/config/bin/scripts/Brightness.sh --down
 
-# Media controls
+# Media controls (hardware default)
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Screenshots
+# Screenshots (save to file)
+unbind = , PRINT
+unbind = SHIFT, PRINT
+unbind = CTRL, PRIN
 bind = , PRINT, exec, hyprshot -m region
 bind = SHIFT, PRINT, exec, hyprshot -m window
 bind = CTRL, PRINT, exec, hyprshot -m output
+# Screenshots (clipboard only)
+unbind = $mod SHIFT, S
+unbind = $mod SHIFT, W
+unbind = $mod SHIFT, F
 bind = $mod SHIFT, S, exec, hyprshot -m region --clipboard-only
 bind = $mod SHIFT, W, exec, hyprshot -m window --clipboard-only
 bind = $mod SHIFT, F, exec, hyprshot -m output --clipboard-only
 
 # Color picker
+unbind = $mod, PRINT
 bind = $mod, PRINT, exec, hyprpicker -a
 
 
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Brave WebApp Bindings
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Mail key binding
-bind = , XF86Mail, exec, $browser --app="https://mail.google.com/"
+bind = , XF86Mail, exec, $webapp="https://mail.google.com/"
 
 # Google Mail
-bind = $mod, M, exec, $browser --app="https://mail.google.com/"
+unbind = $mod, M
+bind = $mod, M, exec, $webapp="https://mail.google.com/"
 
 # BlueSky
-bind = $mod, K, exec, $browser --app="https://bsky.app/"
+unbind = $mod, K
+bind = $mod, K, exec, $webapp="https://bsky.app/"
 
 # Whatsapp
-bind = $mod, W, exec, $browser --app="https://web.whatsapp.com/"
+unbind = $mod, W
+bind = $mod, W, exec, $webapp="https://web.whatsapp.com/"
 
 # Youtube
-bind = $mod, Y, exec, $browser --app="https://youtube.com/"
+unbind = $mod, Y
+bind = $mod, Y, exec, $webapp="https://youtube.com/"
 
 # ChatGPT
-bind = $mod, A, exec, $browser --app="https://chatgpt.com/"
+unbind = $mod, A
+bind = $mod, A, exec, $webapp="https://chatgpt.com/"
 
 # Grok AI
-bind = $mod SHIFT, A, exec, $browser --app="https://grok.com/"
+unbind = $mod SHIFT, A
+bind = $mod SHIFT, A, exec, $webapp="https://grok.com/"
 
 # Google Gemini
-bind = $mod CTRL, A, exec, $browser --app="https://gemini.google.com/"
+unbind = $mod CTRL, A
+bind = $mod CTRL, A, exec, $webapp="https://gemini.google.com/"
 
 # O!MPD
-bind = $mod, O, exec, $browser --app="http://media.server.lan/ompd"
+unbind = $mod, O
+bind = $mod, O, exec, $webapp="http://media.server.lan/ompd"
 
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # System Control
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # Lock screen
+unbind = $mod, L
 bind = $mod, L, exec, hyprlock
 
 # Power menu
+unbind = $mod, ESCAPE
 bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/config/bin/power-menu
