--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -1,5 +1,5 @@
-#_________________________________________________________________________
-# ====================== MONITOR CONFIGURATION ===========================
+#__________________________________________________________________________________________________
+# ===================================== MONITOR CONFIGURATION =====================================
 # Format: monitor = [port], resolution, position, scale
 # monitor=,preferred,auto,1.0
 
@@ -18,8 +18,8 @@ monitor = HDMI-A-1, 1920x1080@59.88, 2820x0, 1.0
 # Samsung (right, portrait)
 monitor = DP-1, 1920x1080@59.88, 4740x-625, 1.0, transform,3
 
-#_________________________________________________________________________
-# ===================== WORKSPACE CONFIGURATION ==========================
+#__________________________________________________________________________________________________
+# ==================================== WORKSPACE CONFIGURATION ====================================
 # Workspace persistent assignment
 workspace = 1, monitor:DVI-D-1, default:true, persistent:true
 workspace = 2, monitor:HDMI-A-3, default:true, persistent:true
@@ -27,12 +27,12 @@ workspace = 3, monitor:HDMI-A-1, default:true, persistent:true
 workspace = 4, monitor:DP-1, default:true, persistent:true
 workspace = 5, name:minimized, persistent:false
 
-#_________________________________________________________________________
-# ======================= CUSTOM AUTO-START ==============================
+#__________________________________________________________________________________________________
+# ====================================== CUSTOM AUTO-START ========================================
 # Set primary monitor (for launching games/fullscreen apps)
 exec-once = xrandr --output HDMI-A-1 --primary
 
-# Prefer dark themes on all gnome apps
+# Prefer dark themes on all gnome apps (fixes white system monitor)
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 # Clean up any residual execution or PID from waybar_cava.sh and cava
