--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -1,38 +1,135 @@
-#_________________________________________________________________________
-# =================== CUSTOM APPS WINDOW RULES ===========================
-# Kitty Terminal (floating center)
-windowrulev2 = float, class:^(kitty)$
-windowrulev2 = size 1000 60%, class:^(kitty)$
-windowrulev2 = center, class:^(kitty)$
+#__________________________________________________________________________________________________
+# =================================== CUSTOM APPS WINDOW RULES ====================================
+# ---------- Kitty Terminal window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(kitty)$, workspace:1
+windowrulev2 = size 1100 60%, class:^(kitty)$, workspace:1
+windowrulev2 = center, class:^(kitty)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(kitty)$, workspace:3
+windowrulev2 = size 1100 60%, class:^(kitty)$, workspace:3
+windowrulev2 = center, class:^(kitty)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(kitty)$, workspace:2
+windowrulev2 = size 85% 40%, class:^(kitty)$, workspace:2
+windowrulev2 = center, class:^(kitty)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(kitty)$, workspace:4
+windowrulev2 = size 85% 40%, class:^(kitty)$, workspace:4
+windowrulev2 = center, class:^(kitty)$, workspace:4
 
-#_________________________________________________________________________
-# ================== BRAVE WEBAPPS WINDOW RULES ==========================
+# ---------- Ghostty terminal window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$, workspace:1
+windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$, workspace:1
+windowrulev2 = size 1100 80%, class:^(com.mitchellh.ghostty-floating)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$, workspace:3
+windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$, workspace:3
+windowrulev2 = size 1100 80%, class:^(com.mitchellh.ghostty-floating)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$, workspace:2
+windowrulev2 = size 85% 40%, class:^(com.mitchellh.ghostty-floating)$, workspace:2
+windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$, workspace:4
+windowrulev2 = size 85% 40%, class:^(com.mitchellh.ghostty-floating)$, workspace:4
+windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$, workspace:4
+
+
+#__________________________________________________________________________________________________
+# ================================== BRAVE WEBAPPS WINDOW RULES ===================================
 # Use ' hyprctl clients | grep -A5 <page name> ' to better match page name
 
-# Bluesky PWA window rules (floating left)
-windowrulev2 = float, class:^(brave-bsky\.app__-Default)$
-windowrulev2 = size 30% 90%, class:^(brave-bsky\.app__-Default)$
-windowrulev2 = move 68% 5%, class:^(brave-bsky\.app__-Default)$
+# ---------- Bluesky PWA window rules
+# Landscape monitor left (floating left)
+windowrulev2 = float, class:^(brave-bsky\.app__-Default)$, workspace:1
+windowrulev2 = size 30% 90%, class:^(brave-bsky\.app__-Default)$, workspace:1
+windowrulev2 = move 68% 5%, class:^(brave-bsky\.app__-Default)$, workspace:1
+# Landscape monitor center (floating left)
+windowrulev2 = float, class:^(brave-bsky\.app__-Default)$, workspace:3
+windowrulev2 = size 30% 90%, class:^(brave-bsky\.app__-Default)$, workspace:3
+windowrulev2 = move 68% 5%, class:^(brave-bsky\.app__-Default)$, workspace:3
+# Portrait monitor left (floating top left)
+windowrulev2 = float, class:^(brave-bsky\.app__-Default)$, workspace:2
+windowrulev2 = size 70% 50%, class:^(brave-bsky\.app__-Default)$, workspace:2
+windowrulev2 = move 25% 45%, class:^(brave-bsky\.app__-Default)$, workspace:2
+# Portrait monitor right (floating top left)
+windowrulev2 = float, class:^(brave-bsky\.app__-Default)$, workspace:4
+windowrulev2 = size 70% 50%, class:^(brave-bsky\.app__-Default)$, workspace:4
+windowrulev2 = move 25% 45%, class:^(brave-bsky\.app__-Default)$, workspace:4
 
-# ChatGPT PWA window rules (floating left)
-windowrulev2 = float, class:^(brave-chatgpt\.com__-Default)$
-windowrulev2 = size 40% 90%, class:^(brave-chatgpt\.com__-Default)$
-windowrulev2 = move 58% 5%, class:^(brave-chatgpt\.com__-Default)$
+# ---------- ChatGPT PWA window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(brave-chatgpt\.com__-Default)$, workspace:1
+windowrulev2 = size 40% 90%, class:^(brave-chatgpt\.com__-Default)$, workspace:1
+windowrulev2 = move 58% 5%, class:^(brave-chatgpt\.com__-Default)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(brave-chatgpt\.com__-Default)$, workspace:3
+windowrulev2 = size 40% 90%, class:^(brave-chatgpt\.com__-Default)$, workspace:3
+windowrulev2 = move 58% 5%, class:^(brave-chatgpt\.com__-Default)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(brave-chatgpt\.com__-Default)$, workspace:2
+windowrulev2 = size 70% 50%, class:^(brave-chatgpt\.com__-Default)$, workspace:2
+windowrulev2 = move 25% 35%, class:^(brave-chatgpt\.com__-Default)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(brave-chatgpt\.com__-Default)$, workspace:4
+windowrulev2 = size 70% 50%, class:^(brave-chatgpt\.com__-Default)$, workspace:4
+windowrulev2 = move 25% 35%, class:^(brave-chatgpt\.com__-Default)$, workspace:4
 
-# Grok AI PWA window rules (floating left)
-windowrulev2 = float, class:^(brave-grok\.com__-Default)$
-windowrulev2 = size 40% 90%, class:^(brave-grok\.com__-Default)$
-windowrulev2 = move 58% 5%, class:^(brave-grok\.com__-Default)$
+# ---------- Grok AI PWA window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(brave-grok\.com__-Default)$, workspace:1
+windowrulev2 = size 40% 90%, class:^(brave-grok\.com__-Default)$, workspace:1
+windowrulev2 = move 58% 5%, class:^(brave-grok\.com__-Default)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(brave-grok\.com__-Default)$, workspace:3
+windowrulev2 = size 40% 90%, class:^(brave-grok\.com__-Default)$, workspace:3
+windowrulev2 = move 58% 5%, class:^(brave-grok\.com__-Default)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(brave-grok\.com__-Default)$, workspace:2
+windowrulev2 = size 70% 50%, class:^(brave-grok\.com__-Default)$, workspace:2
+windowrulev2 = move 25% 35%, class:^(brave-grok\.com__-Default)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(brave-grok\.com__-Default)$, workspace:4
+windowrulev2 = size 70% 50%, class:^(brave-grok\.com__-Default)$, workspace:4
+windowrulev2 = move 25% 35%, class:^(brave-grok\.com__-Default)$, workspace:4
 
-# Google Gemini PWA window rules (floating left)
-windowrulev2 = float, class:^(brave-gemini\.google\.com__-Default)$
-windowrulev2 = size 40% 90%, class:^(brave-gemini\.google\.com__-Default)$
-windowrulev2 = move 58% 5%, class:^(brave-gemini\.google\.com__-Default)$
+# ---------- Google Gemini PWA window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(brave-gemini\.google\.com__-Default)$, workspace:1
+windowrulev2 = size 40% 90%, class:^(brave-gemini\.google\.com__-Default)$, workspace:1
+windowrulev2 = move 58% 5%, class:^(brave-gemini\.google\.com__-Default)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(brave-gemini\.google\.com__-Default)$, workspace:3
+windowrulev2 = size 40% 90%, class:^(brave-gemini\.google\.com__-Default)$, workspace:3
+windowrulev2 = move 58% 5%, class:^(brave-gemini\.google\.com__-Default)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(brave-gemini\.google\.com__-Default)$, workspace:2
+windowrulev2 = size 70% 50%, class:^(brave-gemini\.google\.com__-Default)$, workspace:2
+windowrulev2 = move 25% 35%, class:^(brave-gemini\.google\.com__-Default)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(brave-gemini\.google\.com__-Default)$, workspace:4
+windowrulev2 = size 70% 50%, class:^(brave-gemini\.google\.com__-Default)$, workspace:4
+windowrulev2 = move 25% 35%, class:^(brave-gemini\.google\.com__-Default)$, workspace:4
 
-# Youtube PWA window rules (floating right 1/4)
-windowrulev2 = float, class:^(brave-youtube\.com__-Default)$
-windowrulev2 = size 750 50%, class:^(brave-youtube\.com__-Default)$
-windowrulev2 = move 2% 5%, class:^(brave-youtube\.com__-Default)$
+# ---------- Youtube Gemini PWA window rules
+# Landscape monitor left
+windowrulev2 = float, class:^(brave-youtube\.com__-Default)$, workspace:1
+windowrulev2 = size 40% 90%, class:^(brave-youtube\.com__-Default)$, workspace:1
+windowrulev2 = move 5% 5%, class:^(brave-youtube\.com__-Default)$, workspace:1
+# Landscape monitor center
+windowrulev2 = float, class:^(brave-youtube\.com__-Default)$, workspace:3
+windowrulev2 = size 40% 90%, class:^(brave-youtube\.com__-Default)$, workspace:3
+windowrulev2 = move 5% 5%, class:^(brave-youtube\.com__-Default)$, workspace:3
+# Portrait monitor left
+windowrulev2 = float, class:^(brave-youtube\.com__-Default)$, workspace:2
+windowrulev2 = size 70% 50%, class:^(brave-youtube\.com__-Default)$, workspace:2
+windowrulev2 = move 25% 35%, class:^(brave-youtube\.com__-Default)$, workspace:2
+# Portrait monitor right
+windowrulev2 = float, class:^(brave-youtube\.com__-Default)$, workspace:4
+windowrulev2 = size 70% 50%, class:^(brave-youtube\.com__-Default)$, workspace:4
+windowrulev2 = move 25% 35%, class:^(brave-youtube\.com__-Default)$, workspace:4
 
 # WhatsApp PWA window rules (floating right)
 windowrulev2 = float, class:^(brave-web\.whatsapp\.com__-Default)$
@@ -50,9 +147,9 @@ windowrulev2 = size 80% 80%, class:^(brave-media\.server\.lan__ompd-Default)$
 windowrulev2 = center, class:^(brave-media\.server\.lan__ompd-Default)$
 
 
-# ________________________________________________________________________
-# ====================== Default Window Rules ============================
-# =================== from hyprland.conf original ========================
+#__________________________________________________________________________________________________
+# ====================================== Default Window Rules =====================================
+# =================================== from hyprland.conf original =================================
 
 windowrule = scrolltouchpad 1.5, class:^(com.mitchellh.ghostty)$
 windowrulev2 = float, class:^(org\.pulseaudio\.pavucontrol)$
@@ -153,12 +250,10 @@ windowrulev2 = center, class:^(de.haeckerfelix.Fragments)$
 windowrulev2 = float, class:^(gnome-system-monitor)$
 windowrulev2 = size 1000 85%, class:^(gnome-system-monitor)$
 windowrulev2 = center, class:^(gnome-system-monitor)$
-windowrulev2 = opacity 0.85 0.85, class:^(gnome-system-monitor)$
 # Gnome System Monitor window rules (waybar)
 windowrulev2 = float, class:^(org.gnome.SystemMonitor)$
 windowrulev2 = size 1000 85%, class:^(org.gnome.SystemMonitor)$
 windowrulev2 = center, class:^(org.gnome.SystemMonitor)$
-windowrulev2 = opacity 0.85 0.85, class:^(org.gnome.SystemMonitor)$
 
 # iwgtk WiFi manager window rules
 windowrulev2 = float, class:^(org.twosheds.iwgtk)$
@@ -169,7 +264,6 @@ windowrulev2 = center, class:^(org.twosheds.iwgtk)$
 windowrulev2 = float, class:^(nwg-displays)$
 windowrulev2 = size 900 85%, class:^(nwg-displays)$
 windowrulev2 = center, class:^(nwg-displays)$
-#windowrulev2 = opacity 0.85 0.85, class:^(nwg-displays)$
 
 # Gnome Disk Utility window rules
 windowrulev2 = float, class:^(org.gnome.DiskUtility)$
@@ -201,11 +295,6 @@ windowrulev2 = center, title:^(ArchRiot Control Panel)$
 windowrulev2 = size 900 85%, title:^(ArchRiot Control Panel)$
 #windowrulev2 = opacity 0.85 0.85, class:^(ArchRiot Control Panel)$
 
-# Floating terminal window rules
-windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$
-windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$
-windowrulev2 = size 900 80%, class:^(com.mitchellh.ghostty-floating)$
-
 windowrulev2 = size 52% 85%, floating:1, class:^(brave-.*)$
 
 # Subtle window transparency (98% opacity, 2% background visible)
@@ -223,3 +312,5 @@ windowrulev2 = opacity 0.98 0.96, class:^(Signal)$
 windowrulev2 = opacity 0.98 0.96, class:^(signal)$
 windowrulev2 = opacity 0.98 0.96, class:^(org\.telegram\.desktop)$
 windowrulev2 = opacity 0.98 0.96, class:^(telegram-desktop)$
+windowrulev2 = opacity 0.85 0.85, class:^(org.gnome.SystemMonitor)$
+windowrulev2 = opacity 0.85 0.85, class:^(gnome-system-monitor)$
